@@ -52,7 +52,7 @@
  * along with the jEdit program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  *
- * $Id: Preview_Javadoc_of_Buffer.bsh,v 1.2 2002/05/29 08:35:57 spestov Exp $
+ * $Id: Preview_Javadoc_of_Buffer.bsh,v 1.3 2003/02/28 04:28:35 spestov Exp $
  */
 
 
@@ -424,7 +424,7 @@ else
 
         // Construct the command which will be executed
         StringBuffer command = new StringBuffer(java_home);
-        if (java_home.endsWith("jre"))
+        if (java_home.toLowerCase().endsWith("jre"))
           command.append(File.separator).append("..");
         command.append(File.separator).append("bin");
         command.append(File.separator).append("javadoc ");
